<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/more_details_constraint_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/more_details_activity_more_details_constraint_layout_background_color">

	<android.support.constraint.ConstraintLayout
		android:id="@+id/warranty_det_constraint_layout"
		android:layout_width="@dimen/more_details_activity_warranty_det_constraint_layout_width"
		android:layout_height="@dimen/more_details_activity_warranty_det_constraint_layout_height"
		android:layout_marginTop="@dimen/more_details_activity_warranty_det_constraint_layout_margin_top"
		android:background="@drawable/more_details_activity_warranty_det_constraint_layout_background"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:layout_editor_absoluteX="18dp"
		tools:layout_editor_absoluteY="108dp">
	
		<TextView
			android:id="@+id/jarir_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/more_details_activity_jarir_text_view_margin_top"
			android:fontFamily="@font/font_arialunicodems"
			android:gravity="center"
			android:text="@string/more_details_activity_jarir_text_view_text"
			android:textColor="@color/more_details_activity_jarir_text_view_text_color"
			android:textSize="@dimen/more_details_activity_jarir_text_view_text_size"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="132dp"
			tools:layout_editor_absoluteY="52dp"/>
	
		<TextView
			android:id="@+id/iphone_xtext_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="@dimen/more_details_activity_iphone_xtext_view_margin_start"
			android:layout_marginTop="@dimen/more_details_activity_iphone_xtext_view_margin_top"
			android:fontFamily="@font/font_arialunicodems"
			android:gravity="center"
			android:text="@string/more_details_activity_iphone_xtext_view_text"
			android:textColor="@color/more_details_activity_iphone_xtext_view_text_color"
			android:textSize="@dimen/more_details_activity_iphone_xtext_view_text_size"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/jarir_text_view"
			tools:layout_editor_absoluteX="101dp"
			tools:layout_editor_absoluteY="100dp"/>
	
		<TextView
			android:id="@+id/ex_date_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="@dimen/more_details_activity_ex_date_text_view_margin_start"
			android:layout_marginTop="@dimen/more_details_activity_ex_date_text_view_margin_top"
			android:fontFamily="@font/font_arialunicodems"
			android:gravity="center"
			android:text="@string/more_details_activity_ex_date_text_view_text"
			android:textColor="@color/more_details_activity_ex_date_text_view_text_color"
			android:textSize="@dimen/more_details_activity_ex_date_text_view_text_size"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/iphone_xtext_view"
			tools:layout_editor_absoluteX="53dp"
			tools:layout_editor_absoluteY="147dp"/>
	
		<TextView
			android:id="@+id/pr_date_copy_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="@dimen/more_details_activity_pr_date_copy_text_view_margin_start"
			android:layout_marginTop="@dimen/more_details_activity_pr_date_copy_text_view_margin_top"
			android:fontFamily="@font/font_arialunicodems"
			android:gravity="center"
			android:text="@string/more_details_activity_pr_date_copy_text_view_text"
			android:textColor="@color/more_details_activity_pr_date_copy_text_view_text_color"
			android:textSize="@dimen/more_details_activity_pr_date_copy_text_view_text_size"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/ex_date_text_view"
			tools:layout_editor_absoluteX="45dp"
			tools:layout_editor_absoluteY="177dp"/>
	
		<TextView
			android:id="@+id/pr_date_copy2_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="@dimen/more_details_activity_pr_date_copy2_text_view_margin_start"
			android:layout_marginTop="@dimen/more_details_activity_pr_date_copy2_text_view_margin_top"
			android:fontFamily="@font/font_arialunicodems"
			android:gravity="center"
			android:text="@string/more_details_activity_pr_date_copy2_text_view_text"
			android:textColor="@color/more_details_activity_pr_date_copy2_text_view_text_color"
			android:textSize="@dimen/more_details_activity_pr_date_copy2_text_view_text_size"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/pr_date_copy_text_view"
			tools:layout_editor_absoluteX="73dp"
			tools:layout_editor_absoluteY="204dp"/>
	
		<TextView
			android:id="@+id/price_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="@dimen/more_details_activity_price_text_view_margin_start"
			android:layout_marginTop="@dimen/more_details_activity_price_text_view_margin_top"
			android:fontFamily="@font/font_arialunicodems"
			android:gravity="center"
			android:text="@string/more_details_activity_price_text_view_text"
			android:textColor="@color/more_details_activity_price_text_view_text_color"
			android:textSize="@dimen/more_details_activity_price_text_view_text_size"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/pr_date_copy2_text_view"
			tools:layout_editor_absoluteX="95dp"
			tools:layout_editor_absoluteY="230dp"/>
	
		<TextView
			android:id="@+id/contact_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="@dimen/more_details_activity_contact_text_view_margin_start"
			android:layout_marginTop="@dimen/more_details_activity_contact_text_view_margin_top"
			android:fontFamily="@font/font_arialunicodems"
			android:gravity="center"
			android:text="@string/more_details_activity_contact_text_view_text"
			android:textColor="@color/more_details_activity_contact_text_view_text_color"
			android:textSize="@dimen/more_details_activity_contact_text_view_text_size"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/price_text_view"
			tools:layout_editor_absoluteX="79dp"
			tools:layout_editor_absoluteY="256dp"/>
	
		<Button
			android:id="@+id/send_to_another_button"
			android:layout_width="@dimen/more_details_activity_send_to_another_button_width"
			android:layout_height="@dimen/more_details_activity_send_to_another_button_height"
			android:layout_marginLeft="@dimen/more_details_activity_send_to_another_button_margin_start"
			android:layout_marginTop="@dimen/more_details_activity_send_to_another_button_margin_top"
			android:background="?attr/selectableItemBackground"
			android:fontFamily="@font/font_arialunicodems"
			android:gravity="center"
			android:text="@string/more_details_activity_send_to_another_button_text"
			android:textColor="@color/more_details_activity_send_to_another_button_text_color"
			android:textSize="12sp"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/contact_text_view"
			tools:layout_editor_absoluteX="84dp"
			tools:layout_editor_absoluteY="328dp"/>
	</android.support.constraint.ConstraintLayout>

	<android.support.v7.widget.Toolbar
		android:id="@+id/toolbar"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:background="@color/more_details_activity_toolbar_background_color"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>
</android.support.constraint.ConstraintLayout>