<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/warranty2"
    android:layout_width="@dimen/warranty2_view_holder_warranty2_height"
    android:layout_height="@dimen/warranty2_view_holder_warranty2_height"
    android:background="@drawable/warranty2_view_holder_warranty2_background">

    <TextView
        android:id="@+id/extra_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/warranty2_view_holder_extra_text_view_margin_top"
        android:fontFamily="@font/font_arialunicodems"
        android:gravity="center"
        android:text="@string/warranty2_view_holder_extra_text_view_text"
        android:textColor="@color/warranty2_view_holder_extra_text_view_text_color"
        android:textSize="@dimen/warranty2_view_holder_extra_text_view_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="37dp"/>

    <TextView
        android:id="@+id/dell_lapto_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/warranty2_view_holder_dell_lapto_text_view_margin_top"
        android:fontFamily="@font/font_arialunicodems"
        android:gravity="center"
        android:text="@string/warranty2_view_holder_dell_lapto_text_view_text"
        android:textColor="@color/warranty2_view_holder_dell_lapto_text_view_text_color"
        android:textSize="@dimen/warranty2_view_holder_dell_lapto_text_view_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/extra_text_view"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="122dp"/>

    <TextView
        android:id="@+id/date_text_view"
        android:layout_width="@dimen/warranty2_view_holder_date_text_view_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/warranty2_view_holder_date_text_view_margin_top"
        android:fontFamily="@font/font_arialunicodems"
        android:gravity="center"
        android:text="@string/warranty2_view_holder_date_text_view_text"
        android:textColor="@color/warranty2_view_holder_date_text_view_text_color"
        android:textSize="@dimen/warranty2_view_holder_date_text_view_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dell_lapto_text_view"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="176dp"/>

    <TextView
        android:id="@+id/more_details_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/warranty2_view_holder_more_details_text_view_margin_top"
        android:fontFamily="@font/font_arialunicodems"
        android:gravity="center"
        android:text="@string/warranty2_view_holder_more_details_text_view_text"
        android:textColor="@color/warranty2_view_holder_more_details_text_view_text_color"
        android:textSize="@dimen/warranty2_view_holder_more_details_text_view_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_text_view"
        tools:layout_editor_absoluteX="51dp"
        tools:layout_editor_absoluteY="254dp"/>
</android.support.constraint.ConstraintLayout>