<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/sign_up_constraint_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/sign_up_activity_sign_up_constraint_layout_background_color">

	<android.support.constraint.ConstraintLayout
		android:id="@+id/form_constraint_layout"
		android:layout_width="@dimen/sign_up_activity_form_constraint_layout_width"
		android:layout_height="@dimen/sign_up_activity_form_constraint_layout_height"
		android:layout_marginTop="@dimen/sign_up_activity_form_constraint_layout_margin_top"
		android:background="@drawable/sign_up_activity_form_constraint_layout_background"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:layout_editor_absoluteX="14dp"
		tools:layout_editor_absoluteY="291dp">

		<Button
			android:id="@+id/contnue_buttton_button"
			android:layout_width="0dp"
			android:layout_height="@dimen/sign_up_activity_contnue_buttton_button_height"
			android:layout_marginBottom="@dimen/sign_up_activity_contnue_buttton_button_margin_bottom"
			android:layout_marginLeft="@dimen/sign_up_activity_contnue_buttton_button_margin_start"
			android:layout_marginRight="@dimen/sign_up_activity_contnue_buttton_button_margin_end"
			android:background="@drawable/sign_up_activity_contnue_buttton_button_ripple"
			android:fontFamily="@font/font_applesystemuifont"
			android:gravity="center"
			android:text="@string/sign_up_activity_contnue_buttton_button_text"
			android:textColor="@color/sign_up_activity_contnue_buttton_button_text_color"
			android:textSize="@dimen/sign_up_activity_contnue_buttton_button_text_size"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			tools:layout_editor_absoluteX="16dp"
			tools:layout_editor_absoluteY="253dp"/>

		<android.support.constraint.ConstraintLayout
			android:id="@+id/full_name_constraint_layout"
			android:layout_width="@dimen/sign_up_activity_full_name_constraint_layout_width"
			android:layout_height="@dimen/sign_up_activity_full_name_constraint_layout_height"
			android:layout_marginLeft="@dimen/sign_up_activity_full_name_constraint_layout_margin_start"
			android:layout_marginTop="@dimen/sign_up_activity_full_name_constraint_layout_margin_top"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/enter_password_copy_constraint_layout"
			tools:layout_editor_absoluteX="16dp"
			tools:layout_editor_absoluteY="193dp">

			<EditText
				android:id="@+id/name_edit_text"
				android:layout_width="wrap_content"
				android:layout_height="@dimen/sign_up_activity_name_edit_text_height"
				android:layout_marginRight="@dimen/sign_up_activity_name_edit_text_margin_end"
				android:background="@color/sign_up_activity_name_edit_text_background_color"
				android:fontFamily="@font/font_arialunicodems"
				android:gravity="start|center_vertical"
				android:hint="@string/sign_up_activity_name_edit_text_hint"
				android:inputType="textEmailAddress"
				android:maxLines="1"
				android:textColor="@color/sign_up_activity_name_edit_text_text_color"
				android:textColorHint="@color/default_hint"
				android:textSize="@dimen/sign_up_activity_name_edit_text_text_size"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="39dp"
				tools:layout_editor_absoluteY="5dp"/>

			<ImageView
				android:id="@+id/enter_full_name_image_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/sign_up_activity_enter_full_name_image_view_margin_top"
				android:scaleType="center"
				android:src="@drawable/enter_full_name"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="0dp"
				tools:layout_editor_absoluteY="9dp"/>
		</android.support.constraint.ConstraintLayout>

		<android.support.constraint.ConstraintLayout
			android:id="@+id/enter_password_copy_constraint_layout"
			android:layout_width="@dimen/sign_up_activity_enter_password_copy_constraint_layout_width"
			android:layout_height="@dimen/sign_up_activity_enter_password_copy_constraint_layout_height"
			android:layout_marginLeft="@dimen/sign_up_activity_enter_password_copy_constraint_layout_margin_start"
			android:layout_marginTop="@dimen/sign_up_activity_enter_password_copy_constraint_layout_margin_top"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/phonenumber_constraint_layout"
			tools:layout_editor_absoluteX="16dp"
			tools:layout_editor_absoluteY="144dp">

			<EditText
				android:id="@+id/password_edit_text"
				android:layout_width="wrap_content"
				android:layout_height="@dimen/sign_up_activity_password_edit_text_height"
				android:layout_marginRight="@dimen/sign_up_activity_password_edit_text_margin_end"
				android:background="@color/sign_up_activity_password_edit_text_background_color"
				android:fontFamily="@font/font_applesystemuifont"
				android:gravity="start|center_vertical"
				android:hint="@string/sign_up_activity_password_edit_text_hint"
				android:inputType="textPassword"
				android:maxLines="1"
				android:textColor="@color/sign_up_activity_password_edit_text_text_color"
				android:textColorHint="@color/default_hint"
				android:textSize="@dimen/sign_up_activity_password_edit_text_text_size"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="40dp"
				tools:layout_editor_absoluteY="6dp"/>

			<ImageView
				android:id="@+id/password_image_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:scaleType="center"
				android:src="@drawable/password"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="0dp"
				tools:layout_editor_absoluteY="7dp"/>
		</android.support.constraint.ConstraintLayout>

		<android.support.constraint.ConstraintLayout
			android:id="@+id/phonenumber_constraint_layout"
			android:layout_width="@dimen/sign_up_activity_phonenumber_constraint_layout_width"
			android:layout_height="@dimen/sign_up_activity_phonenumber_constraint_layout_height"
			android:layout_marginLeft="@dimen/sign_up_activity_phonenumber_constraint_layout_margin_start"
			android:layout_marginTop="@dimen/sign_up_activity_phonenumber_constraint_layout_margin_top"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/sign_up_text_view"
			tools:layout_editor_absoluteX="17dp"
			tools:layout_editor_absoluteY="92dp">

			<EditText
				android:id="@+id/phone_number_edit_text"
				android:layout_width="wrap_content"
				android:layout_height="@dimen/sign_up_activity_phone_number_edit_text_height"
				android:background="@color/sign_up_activity_phone_number_edit_text_background_color"
				android:fontFamily="@font/font_arialunicodems"
				android:gravity="start|center_vertical"
				android:hint="@string/sign_up_activity_phone_number_edit_text_hint"
				android:inputType="phone"
				android:maxLines="1"
				android:textColor="@color/sign_up_activity_phone_number_edit_text_text_color"
				android:textColorHint="@color/default_hint"
				android:textSize="@dimen/sign_up_activity_phone_number_edit_text_text_size"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="33dp"
				tools:layout_editor_absoluteY="7dp"/>

			<ImageView
				android:id="@+id/phone_image_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:scaleType="center"
				android:src="@drawable/phone"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="0dp"
				tools:layout_editor_absoluteY="8dp"/>
		</android.support.constraint.ConstraintLayout>

		<TextView
			android:id="@+id/sign_up_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="@dimen/sign_up_activity_sign_up_text_view_margin_start"
			android:layout_marginTop="@dimen/sign_up_activity_sign_up_text_view_margin_top"
			android:fontFamily="@font/font_arialunicodems"
			android:gravity="start"
			android:letterSpacing="0.01"
			android:lineSpacingMultiplier="1.26"
			android:text="@string/sign_up_activity_sign_up_text_view_text"
			android:textColor="@color/sign_up_activity_sign_up_text_view_text_color"
			android:textSize="@dimen/sign_up_activity_sign_up_text_view_text_size"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="16dp"
			tools:layout_editor_absoluteY="27dp"/>
	</android.support.constraint.ConstraintLayout>

	<ImageView
		android:id="@+id/logoo_image_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/sign_up_activity_logoo_image_view_margin_top"
		android:scaleType="center"
		android:src="@drawable/logoo"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:layout_editor_absoluteX="62dp"
		tools:layout_editor_absoluteY="61dp"/>
</android.support.constraint.ConstraintLayout>